language/move-lang/tests/move_check/naming/generics_shadowing_invalid.exp
error: 

   ┌── tests/move_check/naming/generics_shadowing_invalid.move:8:16 ───
   │
 9 │         (s1: Self::S);
   │              ^^^^^^^ Invalid type annotation
   ·
 8 │     foo<S>(s1: S, s2: S): S {
   │                - The type: 'S'
   ·
 9 │         (s1: Self::S);
   │              ------- Is not compatible with: '0x1::M::S'
   │

error: 

    ┌── tests/move_check/naming/generics_shadowing_invalid.move:8:9 ───
    │
 10 │         let s: S = S {};
    │                    ^ Invalid construction. Expected a struct name
    ·
 8 │     foo<S>(s1: S, s2: S): S {
    │         - But 'S' was declared as a type parameter here
    │

error: 

    ┌── tests/move_check/naming/generics_shadowing_invalid.move:8:16 ───
    │
 11 │         bar(s1);
    │         ^^^^^^^ Invalid call of '0x1::M::bar'. Invalid argument for parameter 's'
    ·
 8 │     foo<S>(s1: S, s2: S): S {
    │                - The type: 'S'
    ·
 15 │     bar(s: S) {}
    │            - Is not compatible with: '0x1::M::S'
    │

error: 

    ┌── tests/move_check/naming/generics_shadowing_invalid.move:8:9 ───
    │
 12 │         S {}
    │         ^ Invalid construction. Expected a struct name
    ·
 8 │     foo<S>(s1: S, s2: S): S {
    │         - But 'S' was declared as a type parameter here
    │

